kubernetes/manifests/redis/ciliumnetpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
      name: block-untrusted-traffic
spec:
      endpointSelector: {}
      ingress:
            - fromEndpoints:
                    - matchLabels:
                            io.kubernetes.pod.namespace: bunkerweb
                    - matchLabels:
                            io.kubernetes.pod.namespace: victoria-metrics
                    - matchLabels:
                            io.kubernetes.pod.namespace: immich
                    - matchLabels:
                            io.kubernetes.pod.namespace: external-secrets
                    - matchLabels:
                            io.kubernetes.pod.namespace: authentik
                    - matchLabels:
                      io.kubernetes.pod.namespace: infisical
      egress:
            - toEntities:
                    - cluster
            - toEndpoints:
                    - matchLabels:
                            io.kubernetes.pod.namespace: kube-system
                            k8s-app: kube-dns
              toPorts:
                    - ports:
                            - port: "53"
                              protocol: UDP
                      rules:
                            dns:
                                  - matchPattern: "*"
